--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,18 @@
 {
   "hosting": {
+    "headers": [
+      {
+        "source": "**/*.apk",
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/vnd.android.package-archive"
+          },
+          {
+            "key": "Content-Disposition",
+            "value": "attachment"
+          }
+        ],
     "site": "inventaire-quai",
     "public": "public",
     "ignore": [
